// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all 1`] = `
[
  "google/protobuf/descriptor.proto",
  "gogoproto/gogo.proto",
  "akash/base/v1beta1/attribute.proto",
  "akash/audit/v1beta1/audit.proto",
  "akash/base/v1beta2/attribute.proto",
  "akash/audit/v1beta2/audit.proto",
  "akash/audit/v1beta2/genesis.proto",
  "google/api/http.proto",
  "google/api/annotations.proto",
  "cosmos/base/query/v1beta1/pagination.proto",
  "akash/audit/v1beta2/query.proto",
  "akash/base/v1beta1/endpoint.proto",
  "akash/base/v1beta1/resourcevalue.proto",
  "akash/base/v1beta1/resource.proto",
  "akash/base/v1beta2/endpoint.proto",
  "akash/base/v1beta2/resourcevalue.proto",
  "akash/base/v1beta2/resource.proto",
  "akash/base/v1beta2/resourceunits.proto",
  "akash/cert/v1beta2/cert.proto",
  "akash/cert/v1beta2/genesis.proto",
  "akash/cert/v1beta2/query.proto",
  "cosmos_proto/cosmos.proto",
  "cosmos/base/v1beta1/coin.proto",
  "akash/deployment/v1beta1/authz.proto",
  "akash/deployment/v1beta1/group.proto",
  "akash/deployment/v1beta1/deployment.proto",
  "akash/deployment/v1beta1/params.proto",
  "akash/deployment/v1beta1/genesis.proto",
  "akash/escrow/v1beta1/types.proto",
  "akash/deployment/v1beta1/query.proto",
  "akash/deployment/v1beta2/authz.proto",
  "akash/deployment/v1beta2/deployment.proto",
  "akash/deployment/v1beta2/resource.proto",
  "akash/deployment/v1beta2/groupspec.proto",
  "akash/deployment/v1beta2/deploymentmsg.proto",
  "akash/deployment/v1beta2/groupid.proto",
  "akash/deployment/v1beta2/group.proto",
  "akash/deployment/v1beta2/params.proto",
  "akash/deployment/v1beta2/genesis.proto",
  "akash/deployment/v1beta2/groupmsg.proto",
  "akash/escrow/v1beta2/types.proto",
  "akash/deployment/v1beta2/query.proto",
  "akash/deployment/v1beta2/service.proto",
  "akash/escrow/v1beta1/genesis.proto",
  "akash/escrow/v1beta1/query.proto",
  "akash/escrow/v1beta2/genesis.proto",
  "akash/escrow/v1beta2/query.proto",
  "akash/inflation/v1beta2/params.proto",
  "akash/inflation/v1beta2/genesis.proto",
  "akash/market/v1beta2/order.proto",
  "akash/market/v1beta2/bid.proto",
  "akash/market/v1beta2/lease.proto",
  "akash/market/v1beta2/params.proto",
  "akash/market/v1beta2/genesis.proto",
  "akash/market/v1beta2/query.proto",
  "akash/market/v1beta2/service.proto",
  "akash/provider/v1beta1/provider.proto",
  "akash/provider/v1beta2/provider.proto",
  "akash/provider/v1beta2/genesis.proto",
  "akash/provider/v1beta2/query.proto",
  "confio/proofs.proto",
  "google/protobuf/any.proto",
  "cosmos/app/v1alpha1/config.proto",
  "cosmos/app/v1alpha1/module.proto",
  "cosmos/app/v1alpha1/query.proto",
  "cosmos/auth/v1beta1/auth.proto",
  "cosmos/auth/v1beta1/genesis.proto",
  "cosmos/auth/v1beta1/query.proto",
  "google/protobuf/timestamp.proto",
  "cosmos/authz/v1beta1/authz.proto",
  "cosmos/authz/v1beta1/event.proto",
  "cosmos/authz/v1beta1/genesis.proto",
  "cosmos/authz/v1beta1/query.proto",
  "cosmos/msg/v1/msg.proto",
  "cosmos/authz/v1beta1/tx.proto",
  "cosmos/bank/v1beta1/authz.proto",
  "cosmos/bank/v1beta1/bank.proto",
  "cosmos/bank/v1beta1/genesis.proto",
  "cosmos/bank/v1beta1/query.proto",
  "cosmos/bank/v1beta1/tx.proto",
  "tendermint/crypto/proof.proto",
  "tendermint/version/types.proto",
  "tendermint/crypto/keys.proto",
  "tendermint/types/validator.proto",
  "tendermint/types/types.proto",
  "google/protobuf/duration.proto",
  "tendermint/types/params.proto",
  "tendermint/abci/types.proto",
  "cosmos/base/abci/v1beta1/abci.proto",
  "cosmos/base/kv/v1beta1/kv.proto",
  "cosmos/base/reflection/v1beta1/reflection.proto",
  "cosmos/base/reflection/v2alpha1/reflection.proto",
  "cosmos/base/snapshots/v1beta1/snapshot.proto",
  "cosmos/base/store/v1beta1/commit_info.proto",
  "cosmos/base/store/v1beta1/listening.proto",
  "tendermint/p2p/types.proto",
  "tendermint/types/evidence.proto",
  "tendermint/types/block.proto",
  "cosmos/base/tendermint/v1beta1/query.proto",
  "cosmos/capability/v1beta1/capability.proto",
  "cosmos/capability/v1beta1/genesis.proto",
  "cosmos/crisis/v1beta1/genesis.proto",
  "cosmos/crisis/v1beta1/tx.proto",
  "cosmos/crypto/ed25519/keys.proto",
  "cosmos/crypto/hd/v1/hd.proto",
  "cosmos/crypto/keyring/v1/record.proto",
  "cosmos/crypto/multisig/keys.proto",
  "cosmos/crypto/multisig/v1beta1/multisig.proto",
  "cosmos/crypto/secp256k1/keys.proto",
  "cosmos/crypto/secp256r1/keys.proto",
  "cosmos/distribution/v1beta1/distribution.proto",
  "cosmos/distribution/v1beta1/genesis.proto",
  "cosmos/distribution/v1beta1/query.proto",
  "cosmos/distribution/v1beta1/tx.proto",
  "cosmos/evidence/v1beta1/evidence.proto",
  "cosmos/evidence/v1beta1/genesis.proto",
  "cosmos/evidence/v1beta1/query.proto",
  "cosmos/evidence/v1beta1/tx.proto",
  "cosmos/feegrant/v1beta1/feegrant.proto",
  "cosmos/feegrant/v1beta1/genesis.proto",
  "cosmos/feegrant/v1beta1/query.proto",
  "cosmos/feegrant/v1beta1/tx.proto",
  "cosmos/genutil/v1beta1/genesis.proto",
  "cosmos/gov/v1/gov.proto",
  "cosmos/gov/v1/genesis.proto",
  "cosmos/gov/v1/query.proto",
  "cosmos/gov/v1/tx.proto",
  "cosmos/gov/v1beta1/gov.proto",
  "cosmos/gov/v1beta1/genesis.proto",
  "cosmos/gov/v1beta1/query.proto",
  "cosmos/gov/v1beta1/tx.proto",
  "cosmos/group/v1/types.proto",
  "cosmos/group/v1/events.proto",
  "cosmos/group/v1/genesis.proto",
  "cosmos/group/v1/query.proto",
  "cosmos/group/v1/tx.proto",
  "cosmos/mint/v1beta1/mint.proto",
  "cosmos/mint/v1beta1/genesis.proto",
  "cosmos/mint/v1beta1/query.proto",
  "cosmos/nft/v1beta1/event.proto",
  "cosmos/nft/v1beta1/nft.proto",
  "cosmos/nft/v1beta1/genesis.proto",
  "cosmos/nft/v1beta1/query.proto",
  "cosmos/nft/v1beta1/tx.proto",
  "cosmos/orm/module/v1alpha1/module.proto",
  "cosmos/orm/v1/orm.proto",
  "cosmos/orm/v1alpha1/schema.proto",
  "cosmos/params/v1beta1/params.proto",
  "cosmos/params/v1beta1/query.proto",
  "cosmos/slashing/v1beta1/slashing.proto",
  "cosmos/slashing/v1beta1/genesis.proto",
  "cosmos/slashing/v1beta1/query.proto",
  "cosmos/slashing/v1beta1/tx.proto",
  "cosmos/staking/v1beta1/authz.proto",
  "cosmos/staking/v1beta1/staking.proto",
  "cosmos/staking/v1beta1/genesis.proto",
  "cosmos/staking/v1beta1/query.proto",
  "cosmos/staking/v1beta1/tx.proto",
  "cosmos/tx/signing/v1beta1/signing.proto",
  "cosmos/tx/v1beta1/tx.proto",
  "cosmos/tx/v1beta1/service.proto",
  "cosmos/upgrade/v1beta1/upgrade.proto",
  "cosmos/upgrade/v1beta1/query.proto",
  "cosmos/upgrade/v1beta1/tx.proto",
  "cosmos/vesting/v1beta1/vesting.proto",
  "cosmos/vesting/v1beta1/tx.proto",
  "cosmwasm/wasm/v1/types.proto",
  "cosmwasm/wasm/v1/tx.proto",
  "cosmwasm/wasm/v1/genesis.proto",
  "cosmwasm/wasm/v1/ibc.proto",
  "cosmwasm/wasm/v1/proposal.proto",
  "cosmwasm/wasm/v1/query.proto",
  "evmos/claims/v1/claims.proto",
  "evmos/claims/v1/genesis.proto",
  "evmos/claims/v1/query.proto",
  "evmos/epochs/v1/genesis.proto",
  "evmos/epochs/v1/query.proto",
  "evmos/erc20/v1/erc20.proto",
  "evmos/erc20/v1/genesis.proto",
  "evmos/erc20/v1/query.proto",
  "evmos/erc20/v1/tx.proto",
  "evmos/fees/v1/fees.proto",
  "evmos/fees/v1/genesis.proto",
  "evmos/fees/v1/query.proto",
  "evmos/fees/v1/tx.proto",
  "evmos/incentives/v1/incentives.proto",
  "evmos/incentives/v1/genesis.proto",
  "evmos/incentives/v1/query.proto",
  "evmos/inflation/v1/inflation.proto",
  "evmos/inflation/v1/genesis.proto",
  "evmos/inflation/v1/query.proto",
  "evmos/recovery/v1/genesis.proto",
  "evmos/recovery/v1/query.proto",
  "evmos/vesting/v1/query.proto",
  "evmos/vesting/v1/tx.proto",
  "evmos/vesting/v1/vesting.proto",
  "google/api/auth.proto",
  "google/api/backend.proto",
  "google/api/label.proto",
  "google/api/launch_stage.proto",
  "google/api/metric.proto",
  "google/api/billing.proto",
  "google/api/client.proto",
  "google/api/config_change.proto",
  "google/api/consumer.proto",
  "google/api/context.proto",
  "google/api/control.proto",
  "google/api/distribution.proto",
  "google/api/documentation.proto",
  "google/api/endpoint.proto",
  "google/api/error_reason.proto",
  "google/protobuf/struct.proto",
  "google/api/expr/v1alpha1/syntax.proto",
  "google/protobuf/empty.proto",
  "google/api/expr/v1alpha1/checked.proto",
  "google/api/expr/v1alpha1/value.proto",
  "google/rpc/status.proto",
  "google/api/expr/v1alpha1/eval.proto",
  "google/api/expr/conformance/v1alpha1/conformance_service.proto",
  "google/api/expr/v1alpha1/explain.proto",
  "google/api/expr/v1beta1/source.proto",
  "google/api/expr/v1beta1/expr.proto",
  "google/api/expr/v1beta1/decl.proto",
  "google/api/expr/v1beta1/value.proto",
  "google/api/expr/v1beta1/eval.proto",
  "google/api/field_behavior.proto",
  "google/api/httpbody.proto",
  "google/api/log.proto",
  "google/api/logging.proto",
  "google/api/monitored_resource.proto",
  "google/api/monitoring.proto",
  "google/api/quota.proto",
  "google/api/resource.proto",
  "google/api/routing.proto",
  "google/api/source_info.proto",
  "google/api/system_parameter.proto",
  "google/api/usage.proto",
  "google/protobuf/source_context.proto",
  "google/protobuf/type.proto",
  "google/protobuf/api.proto",
  "google/protobuf/wrappers.proto",
  "google/api/service.proto",
  "google/api/servicecontrol/v1/check_error.proto",
  "google/api/servicecontrol/v1/distribution.proto",
  "google/api/servicecontrol/v1/http_request.proto",
  "google/logging/type/log_severity.proto",
  "google/api/servicecontrol/v1/log_entry.proto",
  "google/api/servicecontrol/v1/metric_value.proto",
  "google/api/servicecontrol/v1/operation.proto",
  "google/api/servicecontrol/v1/quota_controller.proto",
  "google/api/servicecontrol/v1/service_controller.proto",
  "google/rpc/context/attribute_context.proto",
  "google/api/servicecontrol/v2/service_controller.proto",
  "google/api/servicemanagement/v1/resources.proto",
  "google/longrunning/operations.proto",
  "google/api/servicemanagement/v1/servicemanager.proto",
  "google/api/serviceusage/v1/resources.proto",
  "google/api/serviceusage/v1/serviceusage.proto",
  "google/api/serviceusage/v1beta1/resources.proto",
  "google/protobuf/field_mask.proto",
  "google/api/serviceusage/v1beta1/serviceusage.proto",
  "google/api/visibility.proto",
  "google/logging/type/http_request.proto",
  "google/logging/v2/log_entry.proto",
  "google/logging/v2/logging_config.proto",
  "google/logging/v2/logging_metrics.proto",
  "google/logging/v2/logging.proto",
  "google/protobuf/compiler/plugin.proto",
  "google/rpc/code.proto",
  "google/rpc/error_details.proto",
  "ibc/applications/transfer/v1/transfer.proto",
  "ibc/applications/transfer/v1/genesis.proto",
  "ibc/applications/transfer/v1/query.proto",
  "ibc/core/client/v1/client.proto",
  "ibc/applications/transfer/v1/tx.proto",
  "ibc/applications/transfer/v2/packet.proto",
  "ibc/core/channel/v1/channel.proto",
  "ibc/core/channel/v1/genesis.proto",
  "ibc/core/channel/v1/query.proto",
  "ibc/core/channel/v1/tx.proto",
  "ibc/core/client/v1/genesis.proto",
  "ibc/core/client/v1/query.proto",
  "ibc/core/client/v1/tx.proto",
  "ibc/core/commitment/v1/commitment.proto",
  "ibc/core/connection/v1/connection.proto",
  "ibc/core/connection/v1/genesis.proto",
  "ibc/core/connection/v1/query.proto",
  "ibc/core/connection/v1/tx.proto",
  "ibc/core/port/v1/query.proto",
  "ibc/core/types/v1/genesis.proto",
  "ibc/lightclients/localhost/v1/localhost.proto",
  "ibc/lightclients/solomachine/v1/solomachine.proto",
  "ibc/lightclients/solomachine/v2/solomachine.proto",
  "ibc/lightclients/tendermint/v1/tendermint.proto",
  "osmosis/claim/v1beta1/claim.proto",
  "osmosis/claim/v1beta1/params.proto",
  "osmosis/claim/v1beta1/genesis.proto",
  "osmosis/claim/v1beta1/query.proto",
  "osmosis/epochs/genesis.proto",
  "osmosis/epochs/query.proto",
  "osmosis/gamm/pool-models/balancer/balancerPool.proto",
  "osmosis/gamm/pool-models/balancer/tx/tx.proto",
  "osmosis/gamm/pool-models/stableswap/stableswap_pool.proto",
  "osmosis/gamm/pool-models/stableswap/tx.proto",
  "osmosis/gamm/v1beta1/genesis.proto",
  "osmosis/gamm/v1beta1/tx.proto",
  "osmosis/gamm/v1beta1/query.proto",
  "osmosis/lockup/lock.proto",
  "osmosis/incentives/gauge.proto",
  "osmosis/incentives/params.proto",
  "osmosis/incentives/genesis.proto",
  "osmosis/incentives/query.proto",
  "osmosis/incentives/tx.proto",
  "osmosis/lockup/genesis.proto",
  "osmosis/lockup/query.proto",
  "osmosis/lockup/tx.proto",
  "osmosis/mint/v1beta1/mint.proto",
  "osmosis/mint/v1beta1/genesis.proto",
  "osmosis/mint/v1beta1/query.proto",
  "osmosis/pool-incentives/v1beta1/incentives.proto",
  "osmosis/pool-incentives/v1beta1/genesis.proto",
  "osmosis/pool-incentives/v1beta1/gov.proto",
  "osmosis/pool-incentives/v1beta1/query.proto",
  "osmosis/store/v1beta1/tree.proto",
  "osmosis/streamswap/v1/event.proto",
  "osmosis/streamswap/v1/state.proto",
  "osmosis/streamswap/v1/params.proto",
  "osmosis/streamswap/v1/genesis.proto",
  "osmosis/streamswap/v1/query.proto",
  "osmosis/streamswap/v1/tx.proto",
  "osmosis/superfluid/superfluid.proto",
  "osmosis/superfluid/params.proto",
  "osmosis/superfluid/genesis.proto",
  "osmosis/superfluid/query.proto",
  "osmosis/superfluid/tx.proto",
  "osmosis/superfluid/v1beta1/gov.proto",
  "osmosis/tokenfactory/v1beta1/authorityMetadata.proto",
  "osmosis/tokenfactory/v1beta1/params.proto",
  "osmosis/tokenfactory/v1beta1/genesis.proto",
  "osmosis/tokenfactory/v1beta1/query.proto",
  "osmosis/tokenfactory/v1beta1/tx.proto",
  "osmosis/twap/v1beta1/twap_record.proto",
  "osmosis/twap/v1beta1/genesis.proto",
  "osmosis/twap/v1beta1/query.proto",
  "osmosis/txfees/v1beta1/feetoken.proto",
  "osmosis/txfees/v1beta1/genesis.proto",
  "osmosis/txfees/v1beta1/gov.proto",
  "osmosis/txfees/v1beta1/query.proto",
  "tendermint/libs/bits/types.proto",
]
`;

exports[`cosmos/gov/v1beta1/gov.proto 1`] = `
[
  "google/protobuf/descriptor.proto",
  "gogoproto/gogo.proto",
  "cosmos_proto/cosmos.proto",
  "cosmos/base/v1beta1/coin.proto",
  "google/protobuf/timestamp.proto",
  "google/protobuf/any.proto",
  "google/protobuf/duration.proto",
  "cosmos/gov/v1beta1/gov.proto",
]
`;

exports[`cosmos/tx/signing/v1beta1/signing.proto 1`] = `
[
  "google/protobuf/descriptor.proto",
  "gogoproto/gogo.proto",
  "cosmos/crypto/multisig/v1beta1/multisig.proto",
  "google/protobuf/any.proto",
  "cosmos/tx/signing/v1beta1/signing.proto",
]
`;

exports[`osmosis/gamm/v1beta1/tx.proto 1`] = `
[
  "google/protobuf/descriptor.proto",
  "gogoproto/gogo.proto",
  "cosmos_proto/cosmos.proto",
  "cosmos/base/v1beta1/coin.proto",
  "osmosis/gamm/v1beta1/tx.proto",
]
`;
